--- a/app/src/main/res/layout/console_list_item.xml
+++ b/app/src/main/res/layout/console_list_item.xml
@@ -67,6 +67,7 @@
             app:layout_constraintTop_toTopOf="@+id/textView2" />
 
         <TextView
+            android:textAlignment="viewStart"
             android:id="@+id/tv_start_date"
             style="@style/HintTextView"
             android:layout_width="0dp"
