--- a/app/src/main/res/layout/activity_select_report.xml
+++ b/app/src/main/res/layout/activity_select_report.xml
@@ -50,9 +50,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/item_background"
             android:checkedButton="@id/rb_playstation"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="@+id/s_shift"
             app:layout_constraintStart_toEndOf="@+id/barrier2"
             app:layout_constraintTop_toBottomOf="@+id/s_shift">
@@ -84,6 +85,16 @@
                 android:checked="true"
                 android:gravity="center"
                 android:text="@string/summary" />
+
+            <RadioButton
+                android:id="@+id/rb_outs"
+                style="@style/SmallHeadLineTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:checked="true"
+                android:gravity="center"
+                android:text="@string/outs" />
         </RadioGroup>
 
         <Spinner
@@ -91,10 +102,11 @@
             style="@style/Spinner"
             android:layout_width="0dp"
             android:layout_height="40dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="@+id/rg_report_type"
-            app:layout_constraintStart_toStartOf="@+id/rg_report_type"
+            app:layout_constraintStart_toEndOf="@+id/barrier2"
             app:layout_constraintTop_toBottomOf="@+id/rg_report_type"
             tools:visibility="visible" />
 
@@ -117,7 +129,7 @@
             android:layout_height="wrap_content"
             android:text="@string/from"
             app:layout_constraintBottom_toBottomOf="@+id/til_from_date"
-            app:layout_constraintStart_toStartOf="@+id/textView8"
+            app:layout_constraintStart_toStartOf="@+id/textView27"
             app:layout_constraintTop_toTopOf="@+id/til_from_date" />
 
         <TextView
@@ -135,7 +147,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:barrierDirection="end"
-            app:constraint_referenced_ids="textView9,textView,textView8"
+            app:constraint_referenced_ids="textView9,textView,textView8,textView27"
             tools:layout_editor_absoluteX="61dp" />
 
         <com.google.android.material.textfield.TextInputLayout
@@ -206,6 +218,16 @@
             app:layout_constraintEnd_toEndOf="@+id/til_to_date"
             app:layout_constraintStart_toStartOf="@+id/til_to_date"
             app:layout_constraintTop_toTopOf="@+id/til_to_date" />
+
+        <TextView
+            android:id="@+id/textView27"
+            style="@style/SmallHeadLineTextView"
+            android:layout_width="53dp"
+            android:layout_height="wrap_content"
+            android:text="@string/report_type"
+            app:layout_constraintBottom_toBottomOf="@+id/rg_report_type"
+            app:layout_constraintStart_toStartOf="@+id/textView8"
+            app:layout_constraintTop_toTopOf="@+id/rg_report_type" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
