--- a/app/src/main/res/layout/activity_select_report.xml
+++ b/app/src/main/res/layout/activity_select_report.xml
@@ -233,6 +233,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview"
+        android:paddingBottom="56dp"
+        android:clipToPadding="false"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:visibility="gone"
@@ -249,4 +251,19 @@
     <include
         layout="@layout/empty_view"
         tools:visibility="gone" />
+
+    <com.google.android.material.button.MaterialButton
+        style="@style/Button"
+        android:id="@+id/mbtn_pdf"
+        app:icon="@drawable/ic_picture_as_pdf_black_24dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:visibility="visible"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="8dp"
+        android:backgroundTint="#DD2C00"
+        android:text="@string/create_pdf_file"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
